--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
   <script src="script.js"></script>
 </head>
 <body>
+
+  <div class="modal" id="myModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">You lose!</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+        <div class="modal-body">
+          Try again, Press reset!
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="container">
     <div class="menu d-flex justify-content-center">
       <div>
@@ -15,7 +33,7 @@
         <button class="btn btn-success"  onclick = "startGame()"> Reset </button>
       </div>
     </div>
-    <div id="board"  style="margin-top : 30vh">
+    <div id="board">
       <div class="d-flex justify-content-center">
         <div>
           <h1>Snake</h1>
@@ -24,5 +42,6 @@
       </div>
     </div>
   </div>
+
 </body>
 </html>
